Bug 1775684 part 1: Ignore frame visibility when caching focusable state for a11y. r=morgan,emilio

See the code comment in LocalAccessible::NativeInteractiveState for explanation.

Differential Revision: https://phabricator.services.mozilla.com/D168910